fix bad alignment of content on ICO Details 3 pie chart legend

--- a/src/containers/icoDetails3/IcoDetails3.css
+++ b/src/containers/icoDetails3/IcoDetails3.css
@@ -9,6 +9,7 @@
   text-align: left;
   justify-content: flex-start;
   align-items: flex-start;
+  max-width: 272px;
 }
 
 .gg-section-container--ico-details3 .title > div {
